--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.1.1"
+    "filepond": "^4.30.3",
+    "gridfs-stream": "^1.1.1",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.1.1",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "concurrently": "^6.4.0",
