--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "filepond": "^4.30.3",
@@ -22,6 +23,8 @@
     "mongoose": "^6.1.1",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
+    "react-bootstrap": "^2.1.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
